--- a/webserv/emify/templates/upload_success.html
+++ b/webserv/emify/templates/upload_success.html
@@ -17,7 +17,7 @@
 
         <a 
             href="{{ download_url }}" 
-            download="output.json"
+            download="filled_template.docx"
             class="block px-5 py-2 mb-4 bg-green-600 text-white font-medium rounded-lg hover:bg-green-700 transition"
         >
             Download Klageantwort
